MDEV-23268 SIGSEGV on srv_monitor_event if InnoDB is read-only

The srv_monitor_event and the srv_monitor_thread would not be
created when InnoDB is in read-only mode. Yet, some code would
unconditionally invoke os_event_set(srv_monitor_event).